Exercises_K8S/03_laravel6_fullstack/Kubernetes/05_webapp.yml
# App(PHP) and Nginx in same POD

apiVersion: v1
kind: Service
metadata:
  namespace: laravel6fs
  name: webapp-service
  labels:
    app: webapp-deployment
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: webapp-deployment

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: laravel6fs
  name: webapp-deployment
  labels:
    app: webapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-deployment
  template:
    metadata:
      labels:
        app: webapp-deployment
    spec:
      containers:
        - name: webapp-php-container
          image: rafahcsilva/k8s_laravel6fs-app:1.0.0
          command: [ "php-fpm" ]
          ports:
            - containerPort: 9000
        - name: webapp-nginx-container
          image: rafahcsilva/k8s_laravel6fs-web:1.0.0
          command: ["nginx", "-g", "daemon off;"]
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: webapp-configmap-volume
      volumes:
        - name: webapp-configmap-volume
          configMap:
            name: webapp-nginxconf-map
            items:
              - key: nginx.conf
                path: nginx.conf
