Exercises_K8S/03_laravel6_fullstack/Kubernetes/06_webapp-ingress.yml
# Ingress for webapp-service in URL http://libraryapi.test

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: laravel6fs
  name: webapp-ingress
spec:
  rules:
    - host: laravel6fsk8s.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 80
